# autonomous_mobile_manipulation

effector_control/: CMakeLists.txt  README.md  package.xml  setup.py  tf_test.rviz
effector_control/include/effector_control/: force_application.hh
effector_control/launch/: vel_to_lidar.launch
effector_control/scripts/: follow.py
effector_control/src/: end_effector_force.cc  force_application.cc  slider_gui.py  slider_service.py  slider_service.py.bak
robowork_control/config/: main_arm_SIM_twist_mux.yaml
robowork_description/urdf/: bvr_ur5_e_joint_limited.urdf.xacro
robowork_gazebo/worlds/: bvr_playpen.world
robowork_moveit_config/config/: moveit_bvr_SIM_main_arm_SIM_controllers.yaml
robowork_ur_launch/config/: bvr_SIM_main_arm_SIM_robotiq_controllers.yaml  bvr_SIM_main_arm_SIM_ur5e_controllers.yaml
